/* Copyright (C) 2014-2017 Alexander Shishenko <alex@shishenko.com>
 *
 * This program is free software: you can redistribute it and/or modify
 * it under the terms of the GNU General Public License as published by
 * the Free Software Foundation, either version 3 of the License, or
 * (at your option) any later version.
 *
 * This program is distributed in the hope that it will be useful,
 * but WITHOUT ANY WARRANTY; without even the implied warranty of
 * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
 * GNU General Public License for more details.
 *
 * You should have received a copy of the GNU General Public License
 * along with this program.  If not, see <http://www.gnu.org/licenses/>.
 *
 * In addition, as a special exception, the copyright holders give
 * permission to link the code of portions of this program with the
 * OpenSSL library under certain conditions as described in each
 * individual source file, and distribute linked combinations
 * including the two.
 * You must obey the GNU General Public License in all respects
 * for all of the code used other than OpenSSL.  If you modify
 * file(s) with this exception, you may extend this exception to your
 * version of the file(s), but you are not obligated to do so.  If you
 * do not wish to do so, delete this exception statement from your
 * version.  If you delete this exception statement from all source
 * files in the program, then also delete it here.
 */
syntax = "proto3";
import "EncryptedData.proto";
package librevault.serialization;

message Meta {
	/* Required metadata */
	bytes path_id = 1;
	EncryptedData path = 2;	// AES-256-CBC encrypted normalized path relative to sync directory path.
	uint32 meta_type = 3;
	int64 revision = 4;

	/* Content-specific metadata */
	message GenericMetadata {	// Filesystem attributes (ALL AND NOT DELETED)
    	int64 mtime = 1;
    	// Windows-specific
    	uint32 windows_attrib = 2;
    	// Unix-specific
    	uint32 mode = 3;
        uint32 uid = 4;
        uint32 gid = 5;
	}

	message SymlinkMetadata {
		EncryptedData symlink_path = 1;
	}

	message FileMetadata {
		// Algorithm selection
		uint32 algorithm_type = 1;
		uint32 strong_hash_type = 2;

		// Uni-algorithm parameters
		uint32 max_chunksize = 3;
		uint32 min_chunksize = 4;

		// Rabin algorithm parameters
		message RabinGlobalParams {
			uint64 polynomial = 1;
			uint32 polynomial_degree = 2;
			uint32 polynomial_shift = 3;
			uint32 avg_bits = 4;
		}
		EncryptedData rabin_global_params = 5;

		message Chunk {
			bytes ct_hash = 1;
			uint32 size = 2;
			bytes iv = 3;

			bytes pt_hmac = 4;
		}
		repeated Chunk chunks = 255;
	}

	GenericMetadata generic_metadata = 16;
	oneof type_specific_metadata {
		SymlinkMetadata symlink_metadata = 17;
		FileMetadata file_metadata = 18;
	}
}
